# ccm_slam

./: .gitignore  readme.md
cslam/: CMakeLists.txt  package.xml
cslam/conf/: config.yaml  kitti_mono.yaml  kitti_mono_half_res.yaml  vi_euroc.yaml
cslam/conf/rviz/: ccmslam.rviz
cslam/include/cslam/: CMakeLists.txt  CentralControl.h  ClientHandler.h  Communicator.h  Converter.h  Database.h  Datatypes.h  Frame.h  Initializer.h  KeyFrame.h  LoopFinder.h  Map.h  MapMatcher.h  MapMerger.h  MapPoint.h  Mapping.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPSolver.h  Sim3Solver.h  Tracking.h  Viewer.h  config.h  estd.h
cslam/include/cslam/client/: ClientSystem.h
cslam/include/cslam/server/: ServerSystem.h
cslam/launch/: Server.launch
cslam/launch/EuRoC/: Client0_euroc.launch  Client1_euroc.launch  Client2_euroc.launch  Client3_euroc.launch
cslam/launch/KITTI/: Client0_kitti.launch  Client0_kitti_half_res.launch
cslam/src/: CentralControl.cpp  ClientHandler.cpp  Communicator.cpp  Converter.cc  Database.cpp  Frame.cpp  Initializer.cpp  KeyFrame.cpp  KeyFrame_complicated.cpp  LoopFinder.cpp  Map.cpp  MapMatcher.cpp  MapMerger.cpp  MapPoint.cpp  MapPoint_complicated.cpp  Mapping.cpp  ORBextractor.cpp  ORBmatcher.cpp  Optimizer.cpp  PnPSolver.cpp  Sim3Solver.cpp  Tracking.cpp  Viewer.cpp  config.cpp
cslam/src/client/: ClientNode.cpp  ClientSystem.cpp
cslam/src/server/: ServerNode.cpp  ServerSystem.cpp
cslam/srv/: ServiceSaveMap.srv
cslam_msgs/: CMakeLists.txt  package.xml
cslam_msgs/msg/: CvKeyPoint.msg  Descriptor.msg  KF.msg  KFred.msg  MP.msg  MPred.msg  Map.msg  UIntVec.msg
