<?xml version="1.0"?>
<package>
  <name>ccmslam</name>
  <version>1.0.0</version>
  <description>ETHZ V4RL Multi Agent Centralized Collaborative Monocular SLAM Framework (CCM-SLAM)</description>

  <maintainer email="collaborative.slam@gmail.com"> </maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>ccmslam_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>ccmslam_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
